# micro-videos-python

./: .env.exemple  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.docker/: entrypoint.sh
src/: __main__.py
src/__seedwork/domain/: entities.py  exceptions.py  validators.py  value_objects.py
src/__seedwork/tests/unit/domain/: test_unit_entities.py  test_unit_validators.py  test_unit_value_object.py
src/category/domain/: entities.py
src/category/domain/tests/: test_entities.py
src/category/tests/unit/domain/: test_unit_entities.py
