[project]
name = "Micro Videos Python"
version = "0.1.0"
description = "Micro serviço do admin de gerenciamento de vídeos"
authors = [
    {name = "Rafael Borges", email = "rafaelbertelli89@gmail.com"},
]
license = {text = "MIT"}

dependencies = []
requires-python = ">=3.10.4"

[project.optional-dependencies]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=1.6.0",
    "pylint>=2.13.9",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
